# rpi3

./: CHANGELOG.md  Cargo.toml  README.md
crates/pi-agent/: Cargo.toml
crates/pi-agent/src/: agent.rs  agent_loop.rs  context_manager.rs  lib.rs  types.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/benches/: token_counter.rs
crates/pi-ai/src/: api_registry.rs  lib.rs  models.rs  retry.rs  stream.rs  token_counter.rs  types.rs
crates/pi-ai/src/providers/: bedrock.rs  cerebras.rs  deepseek.rs  github_copilot.rs  groq.rs  huggingface.rs  minimax.rs  moonshot.rs  opencode.rs  qwen.rs
crates/pi-ai/src/utils/: mod.rs
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/src/: config.rs  lib.rs
crates/pi-coding-agent/src/core/: agent_session.rs  permissions.rs  session_manager.rs  system_prompt.rs
crates/pi-coding-agent/src/core/auth/: mod.rs  oauth_server.rs  providers.rs  refresh.rs  token_storage.rs
crates/pi-coding-agent/src/core/export/: html.rs
crates/pi-coding-agent/src/core/extensions/: api.rs  dispatcher.rs  events.rs  hot_reload.rs  loader.rs  mod.rs  registry.rs  runner.rs  sandbox.rs  types.rs
crates/pi-coding-agent/src/core/extensions/builtin/: example_counter.rs
crates/pi-coding-agent/src/core/skills/: mod.rs  registry.rs  types.rs
crates/pi-coding-agent/src/core/tools/: edit.rs  mcp.rs  truncate.rs
crates/pi-coding-agent/src/core/tools/notebook/: executor.rs  kernel.rs  state.rs
crates/pi-coding-agent/src/modes/: autocomplete_providers.rs  input_history.rs  interactive.rs  interactive_components.rs  keybindings_config.rs  message_components.rs  message_history.rs  mod.rs  print_mode.rs  settings.rs  theme.rs
crates/pi-coding-agent/src/rpc/: methods.rs  types.rs
crates/pi-coding-agent/tests/: cli_tests.rs  config_tests.rs  e2e_tests.rs
crates/pi-mcp/: Cargo.toml
crates/pi-mcp/src/: client.rs  lib.rs  protocol.rs  server.rs  tools.rs  transport.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/benches/: editor_ops.rs  markdown_render.rs
crates/pi-tui/src/: fuzzy.rs  keybindings.rs  keys.rs  lib.rs  terminal_image.rs  tui.rs
crates/pi-tui/src/components/: box_component.rs  select_list.rs  settings_list.rs
crates/pi-tui/src/components/editor/: mod.rs  vim.rs
docs/porting-plan/: ITERATION-4.md  iteration-3-phase-1-plan.md  iteration-4-phase-3-plan.md  iteration-4-phase-4-plan.md  iteration-5-phase-1-plan.md  iteration-5-phase-5-plan.md
