[package]
name = "pi-ai"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
pin-project-lite.workspace = true
base64.workspace = true
chrono.workspace = true
bytes.workspace = true
rand = "0.8"
async-stream = "0.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
tiktoken-rs = "0.6"
tokenizers = { version = "0.22", features = ["http"] }

[dev-dependencies]
mockito.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
criterion.workspace = true
serial_test.workspace = true

[[bench]]
name = "token_counter"
harness = false
