[package]
name = "pi-coding-agent"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
pi-ai = { path = "../pi-ai" }
pi-tui = { path = "../pi-tui" }
pi-agent = { path = "../pi-agent" }
pi-mcp = { path = "../pi-mcp" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
similar.workspace = true
regex.workspace = true
ignore.workspace = true
globset.workspace = true
directories.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
async-trait.workspace = true
dirs = "5"
shellexpand = "3"
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
bytes.workspace = true
pulldown-cmark = "0.9"
sha2.workspace = true
keyring = "3"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
dotenvy = "0.15"
toml = "0.8"
tempfile.workspace = true
wasmtime = "29"
wasmtime-wasi = "29"
notify = "7"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tokio-test.workspace = true
serial_test = "3"
