[package]
name = "pi-mcp"
version = "0.2.0"
edition = "2021"

[dependencies]
pi-ai = { path = "../pi-ai" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
tokio-util.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
