[package]
name = "pi-tui"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm.workspace = true
tokio.workspace = true
unicode-width.workspace = true
pulldown-cmark.workspace = true
base64.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "markdown_render"
harness = false

[[bench]]
name = "editor_ops"
harness = false
